tests/invalid/Template_Invalid_2.whiley
type nat<int> is (int x) where x >= 0